# MCP-Development-MASTER

Decentralized Sentinel Network (DSN)/: Makefile  PROJECT_STATUS.md  README.md  go.mod
Decentralized Sentinel Network (DSN)/.github/workflows/: ci.yml
Decentralized Sentinel Network (DSN)/cmd/sentinel/: main.go
Decentralized Sentinel Network (DSN)/configs/: sentinel-secure.yaml  sentinel.yaml
Decentralized Sentinel Network (DSN)/deployments/docker/: Dockerfile.sentinel  docker-compose.dev.yml
Decentralized Sentinel Network (DSN)/docs/: api.md  architecture.md  deployment.md  dev-status.md  development-roadmap.md  security-guidelines.md
Decentralized Sentinel Network (DSN)/internal/ai/: sandbox.go  threat_engine.go  validator.go
Decentralized Sentinel Network (DSN)/internal/consensus/: blockchain.go  consensus_engine.go  peer.go  state_validator.go
Decentralized Sentinel Network (DSN)/internal/healing/: action_executor.go  healing_engine.go  strategy_registry.go
Decentralized Sentinel Network (DSN)/internal/monitor/: monitor.go
Decentralized Sentinel Network (DSN)/internal/sentinel/: sentinel.go
Decentralized Sentinel Network (DSN)/pkg/config/: sentinel.go
Decentralized Sentinel Network (DSN)/pkg/crypto/: secure_random.go
Decentralized Sentinel Network (DSN)/pkg/logger/: logger.go
Decentralized Sentinel Network (DSN)/pkg/metrics/: sentinel.go
Decentralized Sentinel Network (DSN)/pkg/validation/: validator.go
Decentralized Sentinel Network (DSN)/scripts/: dev-setup.sh  init-db.sql
Decentralized Sentinel Network (DSN)/tests/integration/: sentinel_test.go
Decentralized Sentinel Network (DSN)/tests/testhelpers/: helpers.go
Decentralized Sentinel Network (DSN)/tests/unit/: config_test.go  monitor_test.go
cloud-security-mcp-server/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
cloud-security-mcp-server/.github/: pull_request_template.md
cloud-security-mcp-server/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
cloud-security-mcp-server/.github/workflows/: ci-cd.yml
cloud-security-mcp-server/cloud_security_mcp_server/: __init__.py  cli.py  cloud_providers.py  config.py  tools.py
cloud-security-mcp-server/cloud_security_mcp_server/compliance_frameworks/: cis.json  nist_csf.json  pci_dss.json  soc2.json
cloud-security-mcp-server/examples/: config_example.yaml  docker-compose.development.yml  docker-compose.production.yml
cloud-security-mcp-server/k8s/: database.yaml  deployment.yaml
cloud-security-mcp-server/monitoring/: prometheus.yml
cloud-security-mcp-server/monitoring/alerts/: cloud_security_alerts.yml
cloud-security-mcp-server/monitoring/grafana/dashboards/: cloud_security_dashboard.json
cloud-security-mcp-server/monitoring/grafana/datasources/: datasources.yml
cloud-security-mcp-server/scripts/: init_db.sql  install.sh
cloud-security-mcp-server/tests/: test_cloud_security_mcp.py
cybersec-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt  setup.py
cybersec-mcp-server/cybersec_mcp_server/: __init__.py  main.py
cybersec-mcp-server/docs/: API.md  SECURITY.md
cybersec-mcp-server/scripts/: install.bat  install.sh
cybersec-mcp-server/tests/: __init__.py  test_main.py
threat-intel-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt  setup.py
threat-intel-mcp-server/docs/: API.md
threat-intel-mcp-server/scripts/: install.bat  install.sh
threat-intel-mcp-server/tests/: test_main.py
threat-intel-mcp-server/threat_intel_mcp_server/: __init__.py  main.py
(+16 files in other folders)
